--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
+  go_router: ^16.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
